Expand recovery command orchestration domain and app/service surface for tsz stress

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -27,6 +27,9 @@
       "path": "./../../domain/recovery-orchestration/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-command-orchestration/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-simulation-planning/tsconfig.json"
     },
     {
