--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@service/recovery-runner": "workspace:*",
     "@service/recovery-fusion-orchestrator": "workspace:*",
+    "@domain/recovery-command-orchestration": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-simulation-planning": "workspace:*",
     "@data/recovery-simulation-metrics": "workspace:*",
