Add continuity lens domain-service-data stack and recovery console workflow UI

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -30,6 +30,7 @@
     "zod": "^3.24.0",
     "@domain/recovery-operations-models": "workspace:*",
     "@data/recovery-operations-store": "workspace:*",
-    "@service/recovery-operations-engine": "workspace:*"
+    "@service/recovery-operations-engine": "workspace:*",
+    "@service/recovery-continuity-lens": "workspace:*"
   }
 }
