feat: expand recovery orchestration planning domain and dashboard UI

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -48,6 +48,9 @@
     "zod": "^3.24.0",
     "@service/recovery-fusion-orchestrator": "workspace:*",
     "@domain/recovery-fabric-orchestration": "workspace:*",
-    "@service/recovery-fabric-controller": "workspace:*"
+    "@service/recovery-fabric-controller": "workspace:*",
+    "@domain/recovery-orchestration-planning": "workspace:*",
+    "@service/recovery-strategy-orchestrator": "workspace:*",
+    "@data/recovery-strategy-store": "workspace:*"
   }
 }
