--- a/tsconfig.json
+++ b/tsconfig.json
@@ -699,6 +699,9 @@
     },
     {
       "path": "./packages/service/recovery-fabric-controller"
-    }
+    },
+    {"path": "./packages/domain/recovery-orchestration-planning"},
+    {"path": "./packages/data/recovery-strategy-store"},
+    {"path": "./packages/service/recovery-strategy-orchestrator"}
   ]
 }
