chore: expand recovery readiness domain, orchestrator, and console for stress typing

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -20,8 +20,10 @@
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-simulation-planning": "workspace:*",
     "@data/recovery-simulation-metrics": "workspace:*",
+    "@data/recovery-readiness-store": "workspace:*",
     "@shared/result": "workspace:*",
     "@service/recovery-operations-policy-engine": "workspace:*",
+    "@service/recovery-readiness-orchestrator": "workspace:*",
     "@aws-sdk/client-eventbridge": "^3.900.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
