--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -40,7 +40,11 @@
     "@service/recovery-stability-orchestrator": "workspace:*",
     "@service/recovery-workflow-orchestrator": "workspace:*",
     "@service/recovery-workload-orchestrator": "workspace:*",
+    "@service/recovery-readiness-orchestrator": "workspace:*",
     "@shared/result": "workspace:*",
+    "@domain/recovery-readiness": "workspace:*",
+    "@domain/recovery-readiness-simulation": "workspace:*",
+    "@data/recovery-readiness-store": "workspace:*",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "react": "^19.0.0",
