--- a/packages/domain/recovery-readiness-simulation/tsconfig.json
+++ b/packages/domain/recovery-readiness-simulation/tsconfig.json
@@ -10,16 +10,13 @@
   ],
   "references": [
     {
-      "path": "./../../domain/recovery-readiness/tsconfig.json"
-    },
-    {
-      "path": "./../../data/recovery-readiness-store/tsconfig.json"
+      "path": "./../../shared/core/tsconfig.json"
     },
     {
       "path": "./../../shared/result/tsconfig.json"
     },
     {
-      "path": "./../../domain/recovery-readiness-simulation/tsconfig.json"
+      "path": "./../../domain/recovery-readiness/tsconfig.json"
     }
   ]
 }
