--- a/tsconfig.json
+++ b/tsconfig.json
@@ -711,6 +711,9 @@
     },
     {
       "path": "./packages/domain/recovery-fabric-models"
+    },
+    {
+      "path": "./packages/domain/recovery-readiness-simulation"
     }
   ]
 }
