chore: expand recovery drill domain and orchestrator surface with app UI

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -66,6 +66,9 @@
       "path": "../../service/recovery-fabric-controller/tsconfig.json"
     },
     {
+      "path": "../../service/recovery-drill-orchestrator/tsconfig.json"
+    },
+    {
       "path": "../../domain/recovery-drill/tsconfig.json"
     },
     {
