--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -32,7 +32,7 @@
     "@domain/recovery-fabric-models": "workspace:*",
     "@service/recovery-fabric-controller": "workspace:*",
     "@domain/recovery-drill": "workspace:*",
-    "@data/recovery-drill-store": "workspace:*"
+    "@data/recovery-drill-store": "workspace:*",
 
     "@service/recovery-drill-orchestrator": "workspace:*",
     "@domain/recovery-orchestration-planning": "workspace:*",
