--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -14,8 +14,10 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@data/recovery-command-control-plane": "workspace:*",
     "@service/recovery-runner": "workspace:*",
     "@service/recovery-fusion-orchestrator": "workspace:*",
+    "@service/recovery-command-intelligence-orchestrator": "workspace:*",
     "@service/recovery-scenario-orchestrator": "workspace:*",
     "@domain/recovery-command-orchestration": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
@@ -35,6 +37,7 @@
     "@data/recovery-drill-store": "workspace:*",
 
     "@service/recovery-drill-orchestrator": "workspace:*",
+    "@domain/recovery-command-language": "workspace:*",
     "@domain/recovery-orchestration-planning": "workspace:*",
     "@aws-sdk/client-eventbridge": "^3.900.0",
     "@types/react": "^19.0.0",
