Add recovery synthesis domain, service, and dashboard orchestration surface

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -36,6 +36,7 @@
     "@service/recovery-incident-orchestrator": "workspace:*",
     "@service/recovery-operations-engine": "workspace:*",
     "@service/recovery-runner": "workspace:*",
+    "@service/recovery-synthesis-orchestrator": "workspace:*",
     "@service/recovery-simulation-orchestrator": "workspace:*",
     "@service/recovery-stability-orchestrator": "workspace:*",
     "@service/recovery-workflow-orchestrator": "workspace:*",
@@ -45,6 +46,7 @@
     "@domain/recovery-readiness": "workspace:*",
     "@domain/recovery-readiness-simulation": "workspace:*",
     "@data/recovery-readiness-store": "workspace:*",
+    "@domain/recovery-scenario-lens": "workspace:*",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "react": "^19.0.0",
