--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -86,6 +86,9 @@
     },
     {
       "path": "../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-signal-intelligence-orchestrator/tsconfig.json"
     }
   ]
 }
