feat(recovery-console): add incident-fusion domain/data/service + UI modules

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -29,7 +29,10 @@
     "@service/recovery-readiness-orchestrator": "workspace:*",
     "@service/recovery-operations-engine": "workspace:*",
     "@service/recovery-continuity-lens": "workspace:*",
+    "@service/incident-fusion-orchestrator": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
+    "@domain/incident-fusion-models": "workspace:*",
+    "@data/incident-fusion-store": "workspace:*",
     "@data/recovery-operations-store": "workspace:*",
     "@domain/recovery-fabric-models": "workspace:*",
     "@service/recovery-fabric-controller": "workspace:*",
