feat: expand fusion readiness simulation domain and dashboard orchestration

--- a/packages/domain/recovery-fusion-intelligence/package.json
+++ b/packages/domain/recovery-fusion-intelligence/package.json
@@ -14,12 +14,14 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@domain/recovery-readiness-simulation": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
     "@domain/recovery-readiness": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/type-level": "workspace:*",
     "zod": "^3.24.0",
-    "@shared/result": "workspace:*"
+    "@shared/result": "workspace:*",
+    "@shared/util": "workspace:*"
   }
 }
