--- a/packages/domain/recovery-fusion-intelligence/tsconfig.json
+++ b/packages/domain/recovery-fusion-intelligence/tsconfig.json
@@ -26,6 +26,12 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/util/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-readiness-simulation/tsconfig.json"
     }
   ]
 }
