Add recovery command studio domain orchestration and UI modules

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -31,6 +31,7 @@
     "@service/recovery-continuity-lens": "workspace:*",
     "@service/incident-fusion-orchestrator": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
+    "@domain/recovery-command-studio": "workspace:*",
     "@domain/incident-fusion-models": "workspace:*",
     "@data/incident-fusion-store": "workspace:*",
     "@data/recovery-operations-store": "workspace:*",
