--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -98,6 +98,9 @@
     },
     {
       "path": "./../../service/recovery-signal-intelligence-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-command-studio/tsconfig.json"
     }
   ]
 }
