Add recovery operations orchestration TS stress domain, data, service, and UI layers

--- a/packages/data/recovery-operations-store/tsconfig.json
+++ b/packages/data/recovery-operations-store/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "references": [
     { "path": "./../../domain/recovery-operations-models/tsconfig.json" },
-    { "path": "./../../shared/result/tsconfig.json" }
+    { "path": "./../../shared/result/tsconfig.json" },
+    { "path": "./../../shared/observability-contracts/tsconfig.json" }
   ]
 }
