--- a/packages/domain/recovery-operations-models/tsconfig.json
+++ b/packages/domain/recovery-operations-models/tsconfig.json
@@ -19,6 +19,9 @@
     },
     {
       "path": "./../../domain/recovery-orchestration/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
     }
   ]
 }
