--- a/packages/data/recovery-operations-store/package.json
+++ b/packages/data/recovery-operations-store/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/recovery-operations-models": "workspace:*",
     "@shared/result": "workspace:*",
+    "@shared/observability-contracts": "workspace:*",
     "@aws-sdk/client-dynamodb": "^3.900.0",
     "@aws-sdk/util-dynamodb": "^3.900.0",
     "zod": "^3.24.0"
