--- a/packages/domain/recovery-operations-models/package.json
+++ b/packages/domain/recovery-operations-models/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
+    "@shared/result": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
     "zod": "^3.24.0"
   }
