feat: add recovery command forge domain and console orchestration surface

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -22,6 +22,9 @@
   ],
   "references": [
     {
+      "path": "./../../domain/recovery-command-forge/tsconfig.json"
+    },
+      {
       "path": "./../../data/recovery-operations-store/tsconfig.json"
     },
     {
