--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -30,6 +30,7 @@
     "@service/recovery-operations-engine": "workspace:*",
     "@service/recovery-continuity-lens": "workspace:*",
     "@service/incident-fusion-orchestrator": "workspace:*",
+    "@domain/recovery-command-forge": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
     "@domain/recovery-command-studio": "workspace:*",
     "@domain/incident-fusion-models": "workspace:*",
