Add recovery ops orchestration monorepo packages for stress load

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -54,6 +54,7 @@
     "@domain/recovery-signal-intelligence": "workspace:*",
     "@service/recovery-incident-graph-engine": "workspace:*",
     "@domain/recovery-incident-graph": "workspace:*",
-    "@service/recovery-command-forge-orchestrator": "workspace:*"
+    "@service/recovery-command-forge-orchestrator": "workspace:*",
+    "@service/recovery-ops-orchestration-engine": "workspace:*"
   }
 }
