Add recovery ops playbook domain/service plus recovery console UI for tsz stress

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -116,6 +116,12 @@
     },
     {
       "path": "./../../service/recovery-signal-intelligence-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-ops-playbook/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-ops-playbook-orchestrator/tsconfig.json"
     }
   ]
 }
