--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -49,6 +49,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.0",
+    "@domain/recovery-ops-playbook": "workspace:*",
+    "@service/recovery-ops-playbook-orchestrator": "workspace:*",
     "@service/recovery-signal-intelligence-orchestrator": "workspace:*",
     "@data/recovery-signal-intelligence-store": "workspace:*",
     "@domain/recovery-signal-intelligence": "workspace:*",
