Expand workload recovery TypeScript surface for tsz stress

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -23,6 +23,9 @@
     "@data/incident-command-store": "workspace:*",
     "@service/recovery-readiness-orchestrator": "workspace:*",
     "@domain/recovery-readiness": "workspace:*",
+    "@service/recovery-workload-orchestrator": "workspace:*",
+    "@domain/recovery-workload-intelligence": "workspace:*",
+    "@data/recovery-workload-store": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
