--- a/packages/app/adaptive-ops-console/tsconfig.json
+++ b/packages/app/adaptive-ops-console/tsconfig.json
@@ -40,6 +40,15 @@
     },
     {
       "path": "./../../domain/recovery-readiness/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-workload-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-workload-intelligence/tsconfig.json"
+    },
+    {
+      "path": "./../../data/recovery-workload-store/tsconfig.json"
     }
   ]
 }
